# IntentGraph

./: .gitignore  BUGFIX_UUID_MAPPING.md  CHANGELOG.md  CLAUDE.md  INSTALL_GH.md  MULTI_LANGUAGE_SPRINT_RESULTS.md  PR_COMMANDS.txt  PR_DESCRIPTION.md  README.md  TEST_RESULTS.md  create-prs.bat  create-prs.sh  enhanced_report.json  pyproject.toml  report2.json  requirements.txt  test_analysis.json  test_js_parser_manual.py  test_python_only.py
.github/workflows/: publish.yml
docs/: agent_workflows.md  reposnapshot-v1.md
docs/Plans/: PLAN.md  SPEC-IG-QUERY-0001.md
examples/: README.md
examples/basic_analysis/: README.md  intentgraph_full.json  intentgraph_medium.json  intentgraph_minimal.json  intentgraph_traditional.json
examples/basic_usage/: analyze_repository.py
examples/repo_analysis/: README.md  compare_outputs.py  generate_snapshot_v1.py  generate_traditional_analysis.py  intentgraph_snapshot_v1.json
examples/snapshot_v1/: README.md
fixtures/javascript/: sample_classes.js  sample_es6.js  sample_functions.js  sample_module.js
fixtures/typescript/: sample_class.ts  sample_exports.ts  sample_imports.ts  sample_interface.ts
src/intentgraph/: __init__.py  cache.py  cli.py  query_engine.py
tests/: test_cache.py  test_cli.py  test_javascript_parser.py  test_query_cli.py  test_query_engine.py  test_typescript_parser.py
tests/integration/: test_end_to_end.py
tests/performance/: test_benchmarks.py
tests/property_based/: test_parsers.py
tests/test_snapshot/: __init__.py  (+5 more)
tests/test_snapshot/fixtures/python_poetry/: app.py  pyproject.toml
(+29 files in other folders)
